src/IronJulia/Exprs/Frontend/gen/JuliaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from JuliaParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace IronJulia.Parse {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class JuliaParser : BaseJuliaParser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		StringStartEnd=1, LinOp=2, ProdOp=3, PowOp=4, CondOp=5, While=6, For=7, 
		Quote=8, Begin=9, If=10, ElseIf=11, Else=12, Cond=13, Dot=14, Comma=15, 
		Assign=16, Mutable=17, Abstract=18, ElementOf=19, Import=20, Using=21, 
		Struct=22, StmtTerminator=23, End=24, MacroName=25, NewLine=26, Skip=27, 
		RPar=28, LPar=29, MultiLineComment=30, LineComment=31, Name=32, Decimal_Int=33;
	public const int
		RULE_file_input = 0, RULE_stmt = 1, RULE_expr = 2, RULE_if = 3, RULE_elseIf = 4, 
		RULE_else = 5, RULE_assignable = 6, RULE_literal = 7, RULE_number = 8, 
		RULE_blockbody = 9;
	public static readonly string[] ruleNames = {
		"file_input", "stmt", "expr", "if", "elseIf", "else", "assignable", "literal", 
		"number", "blockbody"
	};

	private static readonly string[] _LiteralNames = {
		null, "'\"'", null, null, null, null, "'while'", "'for'", "'quote'", "'begin'", 
		"'if'", "'elseif'", "'else'", "'?'", "'.'", "','", "'='", "'mutable'", 
		"'abstract'", "'::'", "'import'", "'using'", "'struct'", null, "'end'", 
		null, null, null, "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "StringStartEnd", "LinOp", "ProdOp", "PowOp", "CondOp", "While", 
		"For", "Quote", "Begin", "If", "ElseIf", "Else", "Cond", "Dot", "Comma", 
		"Assign", "Mutable", "Abstract", "ElementOf", "Import", "Using", "Struct", 
		"StmtTerminator", "End", "MacroName", "NewLine", "Skip", "RPar", "LPar", 
		"MultiLineComment", "LineComment", "Name", "Decimal_Int"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "JuliaParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static JuliaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public JuliaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public JuliaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class File_inputContext : ParserRuleContext {
		public StmtContext blocks;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(JuliaParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		public File_inputContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file_input; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.EnterFile_input(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.ExitFile_input(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaParserVisitor<TResult> typedVisitor = visitor as IJuliaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile_input(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public File_inputContext file_input() {
		File_inputContext _localctx = new File_inputContext(Context, State);
		EnterRule(_localctx, 0, RULE_file_input);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 23;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 20;
					_localctx.blocks = stmt();
					}
					} 
				}
				State = 25;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 27;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 13186892992L) != 0)) {
				{
				State = 26;
				expr(0);
				}
			}

			State = 29;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] StmtTerminator() { return GetTokens(JuliaParser.StmtTerminator); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StmtTerminator(int i) {
			return GetToken(JuliaParser.StmtTerminator, i);
		}
		public StmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.EnterStmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.ExitStmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaParserVisitor<TResult> typedVisitor = visitor as IJuliaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtContext stmt() {
		StmtContext _localctx = new StmtContext(Context, State);
		EnterRule(_localctx, 2, RULE_stmt);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 34;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==StmtTerminator) {
				{
				{
				State = 31;
				Match(StmtTerminator);
				}
				}
				State = 36;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 37;
			expr(0);
			State = 39;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 38;
					Match(StmtTerminator);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 41;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
	 
		public ExprContext() { }
		public virtual void CopyFrom(ExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class LoopExprContext : ExprContext {
		public IToken type;
		public ExprContext cond;
		[System.Diagnostics.DebuggerNonUserCode] public BlockbodyContext blockbody() {
			return GetRuleContext<BlockbodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode While() { return GetToken(JuliaParser.While, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode For() { return GetToken(JuliaParser.For, 0); }
		public LoopExprContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.EnterLoopExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.ExitLoopExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaParserVisitor<TResult> typedVisitor = visitor as IJuliaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoopExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LinBOpExprContext : ExprContext {
		public ExprContext a;
		public IToken broadcast;
		public ExprContext b;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LinOp() { return GetToken(JuliaParser.LinOp, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Dot() { return GetToken(JuliaParser.Dot, 0); }
		public LinBOpExprContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.EnterLinBOpExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.ExitLinBOpExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaParserVisitor<TResult> typedVisitor = visitor as IJuliaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLinBOpExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class GetExprContext : ExprContext {
		[System.Diagnostics.DebuggerNonUserCode] public AssignableContext assignable() {
			return GetRuleContext<AssignableContext>(0);
		}
		public GetExprContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.EnterGetExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.ExitGetExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaParserVisitor<TResult> typedVisitor = visitor as IJuliaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGetExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MacroExprContext : ExprContext {
		public IToken name;
		public ExprContext args;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MacroName() { return GetToken(JuliaParser.MacroName, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public MacroExprContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.EnterMacroExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.ExitMacroExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaParserVisitor<TResult> typedVisitor = visitor as IJuliaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMacroExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FunInvokeContext : ExprContext {
		public IToken name;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPar() { return GetToken(JuliaParser.RPar, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPar() { return GetToken(JuliaParser.LPar, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Name() { return GetToken(JuliaParser.Name, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(JuliaParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(JuliaParser.Comma, i);
		}
		public FunInvokeContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.EnterFunInvoke(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.ExitFunInvoke(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaParserVisitor<TResult> typedVisitor = visitor as IJuliaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunInvoke(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LiteralExprContext : ExprContext {
		[System.Diagnostics.DebuggerNonUserCode] public LiteralContext literal() {
			return GetRuleContext<LiteralContext>(0);
		}
		public LiteralExprContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.EnterLiteralExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.ExitLiteralExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaParserVisitor<TResult> typedVisitor = visitor as IJuliaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLiteralExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CondExprContext : ExprContext {
		[System.Diagnostics.DebuggerNonUserCode] public IfContext @if() {
			return GetRuleContext<IfContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode End() { return GetToken(JuliaParser.End, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ElseIfContext[] elseIf() {
			return GetRuleContexts<ElseIfContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElseIfContext elseIf(int i) {
			return GetRuleContext<ElseIfContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElseContext @else() {
			return GetRuleContext<ElseContext>(0);
		}
		public CondExprContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.EnterCondExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.ExitCondExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaParserVisitor<TResult> typedVisitor = visitor as IJuliaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCondExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ProdBOpExprContext : ExprContext {
		public ExprContext a;
		public IToken broadcast;
		public ExprContext b;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ProdOp() { return GetToken(JuliaParser.ProdOp, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Dot() { return GetToken(JuliaParser.Dot, 0); }
		public ProdBOpExprContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.EnterProdBOpExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.ExitProdBOpExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaParserVisitor<TResult> typedVisitor = visitor as IJuliaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProdBOpExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TupleExprContext : ExprContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPar() { return GetToken(JuliaParser.RPar, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPar() { return GetToken(JuliaParser.LPar, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(JuliaParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(JuliaParser.Comma, i);
		}
		public TupleExprContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.EnterTupleExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.ExitTupleExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaParserVisitor<TResult> typedVisitor = visitor as IJuliaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTupleExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignExprContext : ExprContext {
		public AssignableContext key;
		public IToken broadcast;
		public IToken op;
		public ExprContext val;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Assign() { return GetToken(JuliaParser.Assign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AssignableContext assignable() {
			return GetRuleContext<AssignableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Dot() { return GetToken(JuliaParser.Dot, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PowOp() { return GetToken(JuliaParser.PowOp, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ProdOp() { return GetToken(JuliaParser.ProdOp, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LinOp() { return GetToken(JuliaParser.LinOp, 0); }
		public AssignExprContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.EnterAssignExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.ExitAssignExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaParserVisitor<TResult> typedVisitor = visitor as IJuliaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CondBOpExprContext : ExprContext {
		public ExprContext a;
		public IToken broadcast;
		public ExprContext b;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CondOp() { return GetToken(JuliaParser.CondOp, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Dot() { return GetToken(JuliaParser.Dot, 0); }
		public CondBOpExprContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.EnterCondBOpExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.ExitCondBOpExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaParserVisitor<TResult> typedVisitor = visitor as IJuliaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCondBOpExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PowBOpExprContext : ExprContext {
		public ExprContext a;
		public IToken broadcast;
		public ExprContext b;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PowOp() { return GetToken(JuliaParser.PowOp, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Dot() { return GetToken(JuliaParser.Dot, 0); }
		public PowBOpExprContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.EnterPowBOpExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaParserListener typedListener = listener as IJuliaParserListener;
			if (typedListener != null) typedListener.ExitPowBOpExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaParserVisitor<TResult> typedVisitor = visitor as IJuliaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPowBOpExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		return expr(0);
	}

	private ExprContext expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExprContext _localctx = new ExprContext(Context, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				{
				_localctx = new MacroExprContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				{
				State = 44;
				((MacroExprContext)_localctx).name = Match(MacroName);
				State = 48;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 45;
						((MacroExprContext)_localctx).args = expr(0);
						}
						} 
					}
					State = 50;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
				}
				}
				}
				break;
			case 2:
				{
				_localctx = new LoopExprContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				{
				State = 51;
				((LoopExprContext)_localctx).type = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==While || _la==For) ) {
					((LoopExprContext)_localctx).type = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 52;
				((LoopExprContext)_localctx).cond = expr(0);
				State = 53;
				blockbody();
				}
				}
				break;
			case 3:
				{
				_localctx = new CondExprContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				{
				State = 55;
				@if();
				State = 59;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==ElseIf) {
					{
					{
					State = 56;
					elseIf();
					}
					}
					State = 61;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 63;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==Else) {
					{
					State = 62;
					@else();
					}
				}
